--- a/about-us.html
+++ b/about-us.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="fantasy">
+  <style>
+    .vision {
+            background-color: #3498db;
+            color: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .vision h2 {
+            color: #fff;
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+        .vision p {
+            font-size: 1.2em;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .team {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .team-member {
+            background-color: #fff;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+        .team-member:hover {
+            transform: translateY(-5px);
+        }
+        .team-member img {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+        }
+        .team-member-info {
+            padding: 20px;
+        }
+        .team-member h3 {
+            margin: 0 0 10px 0;
+            color: #2c3e50;
+        }
+        .team-member h4 {
+            margin: 0 0 10px 0;
+            color: #3498db;
+        }
+        .team-member p {
+            margin: 0;
+            font-size: 0.9em;
+        }
+        .mentor {
+            background-color: #2ecc71;
+            color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 30px;
+            text-align: center;
+        }
+        .mentor h3 {
+            margin: 0 0 10px 0;
+            font-size: 1.5em;
+        }
+  </style>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Z-ACTUELL - Contact Page</title>
     <link rel="stylesheet" href="output.css" />
     <link rel="stylesheet" href="theme.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="font-sans text-black">
     <div class="navbar">
       <div class="navbar-start">
         <div class="dropdown">
@@ -66,11 +140,73 @@
         </ul>
       </div>
     </div>
-    <section class="m-10">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
-      repellat animi fuga architecto voluptates, eveniet sit delectus, alias
-      natus voluptate deserunt illum nam doloribus provident expedita. Dolor sed
-      quae perspiciatis.
+    <section class="m-2 p-3" id="hp1">
+      <div class="card shadow-lg">
+        <div class="card-body">
+          <h2 class="card-title justify-center">
+           OUR VISION
+          </h2>
+          <p class="text-center">
+            India's first Make in India gaming marketplace, turning innovative Indian games into global brands.
+          </p>
+        </div>
+      </div>
     </section>
+    <section class="m-10">
+      <div class="team">
+          <div class="team-member">
+              <img src="./img/p1.jpg" alt="Akshaya S">
+              <div class="team-member-info">
+                  <h3 class="font-bold">Akshaya S</h3>
+                  <h4>Founder</h4>
+                  <p>CS Engineer</p>
+                  <p>3 yrs of R&D </p>
+              </div>
+          </div>
+
+          <div class="team-member">
+              <img src="./img/p3.jpg" alt="Savitha Prabhu">
+              <div class="team-member-info">
+                  <h3>Savitha Prabhu</h3>
+                  <h4>Co Founder</h4>
+                  <p>
+                    Business development
+                  </p>
+              </div>
+          </div>
+          <div class="team-member">
+              <img src="./img/p2.png" alt="Rajesh S">
+              <div class="team-member-info">
+                  <h3>Rajesh S</h3>
+                  <h4>Intern</h4>
+                  <p>CS Engineer</p>
+              </div>
+          </div>
+          <div class="team-member">
+              <img src="./img/p4.jpg" alt="Meenakshi">              
+              <div class="team-member-info">
+                  <h3>Meenakshi</h3>
+                  <h4>Intern</h4>
+                  <p>Designer</p>
+              </div>
+          </div>
+      </div>
+
+      <div style="background-color: #2ebccc; border-radius: 10px; margin-top: 30px; padding: 20px; color: white; margin-left:0%; margin-right: auto;">
+        <h3>Our Mentor</h3>
+        <h3>Dr. Phani Kumar - Dean of Student Affairs</h3>
+        <p>Patent agent Guided multiple startups, securing ₹1.34+ Crore in funding</p>
+      </div>
+      <section class="m-2 p-4" id="hp2">
+        <footer
+        class="fixed bottom-0 left-0 w-full p-1 text-center bg-black text-white"
+        style="z-index: 100;"
+      >
+        &copy; 2025 Z-ACTUELL. All rights reserved.
+      </footer>
+      </section>
+    </section>
+    
+    
   </body>
 </html>
