--- a/about-us.html
+++ b/about-us.html
@@ -155,7 +155,7 @@
     <section class="m-10">
       <div class="team">
           <div class="team-member">
-              <img src="./img/p1.jpg" alt="Akshaya S">
+              <img src="./img/p1r.png" alt="Akshaya S" style="background-color: #ffd3b6;">
               <div class="team-member-info">
                   <h3 class="font-bold">Akshaya S</h3>
                   <h4>Founder</h4>
@@ -165,7 +165,7 @@
           </div>
 
           <div class="team-member">
-              <img src="./img/p3.jpg" alt="Savitha Prabhu">
+              <img src="./img/p3r.png" alt="Savitha Prabhu" style="background-color: #a7c7e7;">
               <div class="team-member-info">
                   <h3>Savitha Prabhu</h3>
                   <h4>Co Founder</h4>
@@ -175,7 +175,7 @@
               </div>
           </div>
           <div class="team-member">
-              <img src="./img/p2.png" alt="Rajesh S">
+              <img src="./img/p2r.png" alt="Rajesh S" style="background-color: #ffc5d3;">
               <div class="team-member-info">
                   <h3>Rajesh S</h3>
                   <h4>Intern</h4>
@@ -183,7 +183,7 @@
               </div>
           </div>
           <div class="team-member">
-              <img src="./img/p4.jpg" alt="Meenakshi">              
+              <img src="./img/p4r.png" alt="Meenakshi" style="background-color: #fdfd96;">             
               <div class="team-member-info">
                   <h3>Meenakshi</h3>
                   <h4>Intern</h4>
@@ -192,7 +192,7 @@
           </div>
       </div>
 
-      <div style="background-color: #2ebccc; border-radius: 10px; margin-top: 30px; padding: 20px; color: white; margin-left:0%; margin-right: auto;">
+      <div style="background-color: #dcedc1; border-radius: 10px; margin-top: 30px; padding: 20px; color: black; margin-left:0%; margin-right: auto;">
         <h3>Our Mentor</h3>
         <h3>Dr. Phani Kumar - Dean of Student Affairs</h3>
         <p>Patent agent Guided multiple startups, securing ₹1.34+ Crore in funding</p>
