--- a/index2.html
+++ b/index2.html
@@ -1,121 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Z-ACTUELL - India's Gaming Revolution</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;400;800&display=swap" rel="stylesheet">
-</head>
-<body>
-
-    <!-- Navigation Bar -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="navbar-start">
-            <div class="dropdown">
-                <button class="dropdown-btn">☰</button>
-                <ul class="dropdown-content">
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./innovation.html">Innovation</a></li>
-                    <li><a href="./about-us.html">About Us</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <img src="./img/logo.png" class="logo" alt="Z-ACTUELL Logo">
-        </div>
-        <ul class="nav-links">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <button class="dropdown-btn">☰</button>
+          <ul class="dropdown-content">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./innovation.html">Innovation</a></li>
-            <li><a href="./about-us.html">About Us</a></li>
+            <li><a href="./about_us.html">About Us</a></li>
             <li><a href="./contact.html">Contact</a></li>
-        </ul>
+          </ul>
+        </div>
+        <img src="./img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
+      </div>
+      <ul class="nav-links">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./innovation.html">Innovation</a></li>
+        <li><a href="./about_us.html">About Us</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
     </nav>
+    <hr />
 
-    <hr>
-
-    <!-- Introduction Section -->
-    <section class="intro-section">
-      <div class="wallpaper"><img src="img/home/wallpaper.png" alt="wallpaper"></div>
-        <div class="card">
-          <!-- <img src="img/wallpaper.png" alt="wallpaper"> -->
-            <h2>Welcome to Z-ACTUELL - India's Gaming Revolution!</h2>
-            <p>Marketplace for Innovators: A platform to create Indian gaming brands, just like Disney!</p>
-        </div>
+    <section class="intro">
+      <div class="wallpaper">
+        <img src="img/home/wallpaper.png" alt="wallpaper" />
+      </div>
+      <div class="main-content">
+        <!-- <img src="img/wallpaper.png" alt="wallpaper"> -->
+        <h2>Welcome to Z-ACTUELL - India's Gaming Revolution!</h2>
+        <p>
+          Marketplace for Innovators: A platform to create Indian gaming brands,
+          just like Disney!
+        </p>
+      </div>
     </section>
-    <div class="why">
-    <h2 class="section-title">Why Z-ACTUELL?</h2>
-    <section class="why-section">
-        <div class="info-card orange">
-          <img src="img/home/g1.png">
-            <p>India drives 30% of global mobile games, yet lacks iconic Indian gaming brands.</p>
+    <div class="information">
+      <h2 class="info-title">Why Z-ACTUELL?</h2>
+      <section class="info-section">
+        <div class="info-box orange">
+          <img src="img/home/g1.png" />
+          <p>
+            India drives 30% of global mobile games, yet lacks iconic Indian
+            gaming brands.
+          </p>
         </div>
-        <div class="info-card green">
-          <img src="img/home/g2.png">
-            <p>The Indian gaming market is growing at 25% CAGR, set to reach ₹80,000 crores.</p>
+        <div class="info-box green">
+          <img src="img/home/g2.png" />
+          <p>
+            The Indian gaming market is growing at 25% CAGR, set to reach
+            ₹80,000 crores.
+          </p>
         </div>
-        <div class="info-card blue">
-          <img src="img/home/g3.png">
-            <p>We provide a platform to turn Indian games into iconic brands.</p>
+        <div class="info-box blue">
+          <img src="img/home/g3.png" />
+          <p>We provide a platform to turn Indian games into iconic brands.</p>
         </div>
-    </section>
+      </section>
 
-    <!-- Mission Section -->
-    <section class="mission-section">
+      <!-- Mission Section -->
+      <section class="mission-section">
         <h2>🎮 Our Mission 🚀</h2>
         <p>
-            Empowering Indian game innovators by bridging the gap between <b>physical board games</b>,
-            <b>video games</b>, <b>iconic characters</b>, and <b>entertainment</b>.
+          Empowering Indian game innovators by bridging the gap between
+          <b>physical board games</b>, <b>video games</b>,
+          <b>iconic characters</b>, and <b>entertainment</b>.
         </p>
-        <p>Join the movement. Be a part of the next big gaming revolution! 🎯🔥</p>
+        <p>
+          Join the movement. Be a part of the next big gaming revolution! 🎯🔥
+        </p>
         <button class="join-btn">Join Now 🚀</button>
-    </section>
-  </div>
+      </section>
+    </div>
 
-    <div class="games">
-    <div class="what">
-        <h2>This is Z-ACTUELL!</h2>
-    </div>    
-    <div class="carousel">
+    <div class="game-display">
+      <div class="what">
+        <h2>Z-ACTUELL Gallary!</h2>
+      </div>
+      <div class="carousel">
         <div id="slide1" class="carousel-item">
-            <img src="img/home/Carousel/c1.png" alt="Image 1">
-            <div class="carousel-nav">
-                <a href="#slide4" class="btn-circle">❮</a>
-                <a href="#slide2" class="btn-circle">❯</a>
-            </div>
+          <img src="img/home/Carousel/c1.png" alt="Image 1" />
+          <div class="carousel-nav">
+            <a href="#slide4" class="btn-circle">❮</a>
+            <a href="#slide2" class="btn-circle">❯</a>
+          </div>
         </div>
 
         <div id="slide2" class="carousel-item">
-            <img src="img/home/Carousel/c2.png" alt="Image 2">
-            <div class="carousel-nav">
-                <a href="#slide1" class="btn-circle">❮</a>
-                <a href="#slide3" class="btn-circle">❯</a>
-            </div>
+          <img src="img/home/Carousel/c2.png" alt="Image 2" />
+          <div class="carousel-nav">
+            <a href="#slide1" class="btn-circle">❮</a>
+            <a href="#slide3" class="btn-circle">❯</a>
+          </div>
         </div>
 
         <div id="slide3" class="carousel-item">
-            <img src="img/home/Carousel/c3.png" alt="Image 3">
-            <div class="carousel-nav">
-                <a href="#slide2" class="btn-circle">❮</a>
-                <a href="#slide4" class="btn-circle">❯</a>
-            </div>
+          <img src="img/home/Carousel/c3.png" alt="Image 3" />
+          <div class="carousel-nav">
+            <a href="#slide2" class="btn-circle">❮</a>
+            <a href="#slide4" class="btn-circle">❯</a>
+          </div>
         </div>
 
         <div id="slide4" class="carousel-item">
-            <img src="img/home/Carousel/c4.png" alt="Image 4">
-            <div class="carousel-nav">
-                <a href="#slide3" class="btn-circle">❮</a>
-                <a href="#slide1" class="btn-circle">❯</a>
-            </div>
+          <img src="img/home/Carousel/c4.png" alt="Image 4" />
+          <div class="carousel-nav">
+            <a href="#slide3" class="btn-circle">❮</a>
+            <a href="#slide1" class="btn-circle">❯</a>
+          </div>
         </div>
-    </div>
-  </div>
-
-    <!-- Footer -->
-    <div class="footer">
-        &copy; 2025 Z-ACTUELL. All rights reserved.
+      </div>
     </div>
 
-</body>
+    <div class="footer">&copy; 2025 Z-ACTUELL. All rights reserved.</div>
+  </body>
 </html>
