--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
         <div class="dropdown">
           <button class="dropdown-btn">☰</button>
           <ul class="dropdown-content">
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index2.html">Home</a></li>
             <li><a href="./innovation.html">Innovation</a></li>
             <li><a href="./about_us.html">About Us</a></li>
             <li><a href="./contact.html">Contact</a></li>
@@ -21,46 +21,59 @@
         <img src="./img/logo.png" class="logo" alt="Z-ACTUELL Logo" />
       </div>
       <ul class="nav-links">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index2.html">Home</a></li>
         <li><a href="./innovation.html">Innovation</a></li>
         <li><a href="./about_us.html">About Us</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
-    </nav>
+    </nav>    
     <hr />
 
     <section class="intro">
       <div class="wallpaper">
-        <img src="img/home/wallpaper.png" alt="wallpaper" />
+        <img src="img/home/wallpaper/wallpaper_image.png" alt="wallpaper" />
       </div>
       <div class="main-content">
-        <!-- <img src="img/wallpaper.png" alt="wallpaper"> -->
-        <h2>Welcome to Z-ACTUELL - India's Gaming Revolution!</h2>
+        <h2>Welcome to Z-ACTUELL India's Gaming Revolution!</h2>
         <p>
           Marketplace for Innovators: A platform to create Indian gaming brands,
           just like Disney!
         </p>
+        <div class="additional-design">
+        <div class="design pac">
+          <img src="./img/home/design/d3.png" alt="design"/>
+        </div>
+        <div class="design">
+          <img src="./img/home/design/d1.png" alt="design"/>
+        </div>
+        <div class="design">
+          <img src="./img/home/design/d1.png" alt="design"/>
+        </div>
+        <div class="design">
+          <img src="./img/home/design/d1.png" alt="design"/>
+        </div>
+      </div>
       </div>
     </section>
     <div class="information">
       <h2 class="info-title">Why Z-ACTUELL?</h2>
       <section class="info-section">
         <div class="info-box orange">
-          <img src="img/home/g1.png" />
+          <img src="img/home/icons/g1.png" />
           <p>
             India drives 30% of global mobile games, yet lacks iconic Indian
             gaming brands.
           </p>
         </div>
         <div class="info-box green">
-          <img src="img/home/g2.png" />
+          <img src="img/home/icons/g2.png" />
           <p>
             The Indian gaming market is growing at 25% CAGR, set to reach
             ₹80,000 crores.
           </p>
         </div>
         <div class="info-box blue">
-          <img src="img/home/g3.png" />
+          <img src="img/home/icons/g3.png" />
           <p>We provide a platform to turn Indian games into iconic brands.</p>
         </div>
       </section>
@@ -83,37 +96,42 @@
     <div class="game-display">
       <div class="what">
         <h2>Z-ACTUELL Gallary!</h2>
-      </div>
-      <div class="carousel">
-        <div id="slide1" class="carousel-item">
-          <img src="img/home/Carousel/c1.png" alt="Image 1" />
-          <div class="carousel-nav">
-            <a href="#slide4" class="btn-circle">❮</a>
-            <a href="#slide2" class="btn-circle">❯</a>
+        <div class="grid-container">
+          <div class="grid-item">
+            <img src="img/home/gallary/c1.png" alt="Kids playing" />
           </div>
-        </div>
-
-        <div id="slide2" class="carousel-item">
-          <img src="img/home/Carousel/c2.png" alt="Image 2" />
-          <div class="carousel-nav">
-            <a href="#slide1" class="btn-circle">❮</a>
-            <a href="#slide3" class="btn-circle">❯</a>
+          <div class="grid-item">
+            <img src="img/home/gallary/c2.png" alt="Kids playing" />
           </div>
-        </div>
-
-        <div id="slide3" class="carousel-item">
-          <img src="img/home/Carousel/c3.png" alt="Image 3" />
-          <div class="carousel-nav">
-            <a href="#slide2" class="btn-circle">❮</a>
-            <a href="#slide4" class="btn-circle">❯</a>
+          <div class="grid-item">
+            <img src="img/home/gallary/c3.png" alt="Kids playing" />
           </div>
-        </div>
-
-        <div id="slide4" class="carousel-item">
-          <img src="img/home/Carousel/c4.png" alt="Image 4" />
-          <div class="carousel-nav">
-            <a href="#slide3" class="btn-circle">❮</a>
-            <a href="#slide1" class="btn-circle">❯</a>
+          <div class="grid-item">
+            <img src="img/home/gallary/c4.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c5.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c6.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c7.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c8.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c9.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c10.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c11.png" alt="Kids playing" />
+          </div>
+          <div class="grid-item">
+            <img src="img/home/gallary/c12.png" alt="Kids playing" />
           </div>
         </div>
       </div>
